--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="about" id="about">
             <div class="about__content">
                 <a href="#" class="about__close">&times;</a>
-                <p class="about__text">Designed and built by Lauren Gayle, Jinay Jain, Rama Mani, <a href="https://www.linkedin.com/in/lillianwight/" target="_blank" class="about__link">Lillian Wight</a>, and Emily Zacherl as their contribution to <a href="https://codevid19.com/" target="_blank" class="about__link">CODEVID-19</a>, the world's first global pandemic hackathon.</p>
+                <p class="about__text">Designed and built by <a href="https://github.com/LaurenGayle" target="_blank" class="about__link">Lauren Gayle</a> Jinay Jain, Rama Mani, <a href="https://www.linkedin.com/in/lillianwight/" target="_blank" class="about__link">Lillian Wight</a>, and Emily Zacherl as their contribution to <a href="https://codevid19.com/" target="_blank" class="about__link">CODEVID-19</a>, the world's first global pandemic hackathon.</p>
             </div><!-- end about__content-->
         </div><!-- end about -->
 
