Continued work on styling form input fields.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
                         <form action="#" class="needs-validation">
                             <div class="form__group">
-                                
                                 <input type="text" class="form__input" placeholder="FULL NAME of Your Loved One" id="name" required>
                                 <label for="name" class="form__label">FULL NAME</label>
                             </div><!-- end form__group -->
@@ -55,7 +54,7 @@
                                 <label for="name" class="form__label">AGE</label>
                             </div><!-- end form__group -->
 
-                            <div class="form__group">
+                            <div class="form__group" id="form__group">
                                 <select id="country" name="country" class="form__input" required>
                                     <option value="">COUNTRY where your loved one died</option>
                                     <option value="AF">Afghanistan</option>
