--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-        
 		<link href="sass/main.css" rel="stylesheet">
+        <script src="js/index.js"></script>
+        <script src="js/person.js"></script>
+        <script src="js/upload.js"></script>
     </head>
     
 	<body>
@@ -322,7 +324,7 @@
                             <div class="form__group">
                                 <form class="form__image">
                                   <div class="form__upload--wrapper" data-text="Select an image">
-                                    <input name="form__upload--field" type="file" class="form__upload--field" value="">
+                                    <input name="file-upload-field" type="file" class="file-upload-field" value="">
                                   </div><!-- end form__upload -->
                                 </form>
                             </div><!-- end form__group -->
