Minor adjustments to navigation page, submission form

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <li class="navigation__item"><a href="#about" class="navigation__link">About</a></li>
                     <li class="navigation__item"><a href="#share" class="navigation__link">Share Your Memory</a></li>
                     <li class="navigation__item"><a href="#credits" class="navigation__link">Credits</a></li>
+                    <li class="navigation__item"><a href="#contact" class="navigation__link">Contact Us</a></li>
                     <li class="navigation__item"><a href="#" class="navigation__link">Back</a></li>
                 </ul>
             </nav>
@@ -33,7 +34,7 @@
         <div class="about" id="about">
             <div class="about__content">
                 <a href="#" class="about__close">&times;</a>
-                <p class="about__text">Designed and built by <a href="https://github.com/LaurenGayle" target="_blank" class="about__link">Lauren Gayle</a> Jinay Jain, Aaron Jones, Rama Mani, <a href="https://www.linkedin.com/in/lillianwight/" target="_blank" class="about__link">Lillian Wight</a>, and Emily Zacherl as their contribution to <a href="https://codevid19.com/" target="_blank" class="about__link">CODEVID-19</a>, the world's first global pandemic hackathon.</p>
+                <p class="about__text">Designed and built by <a href="https://github.com/LaurenGayle" target="_blank" class="about__link">Lauren Gayle</a>, <a href="https://github.com/jinayjain/" target="_blank" class="about__link">Jinay Jain</a>, <a href="https://www.linkedin.com/in/aaronajones/" target="_blank" class="about__link">Aaron Jones</a>, Rama Mani, <a href="https://www.linkedin.com/in/lillianwight/" target="_blank" class="about__link">Lillian Wight</a>, and Emily Zacherl as their contribution to <a href="https://codevid19.com/" target="_blank" class="about__link">CODEVID-19</a>, the world's first global pandemic hackathon.</p>
             </div><!-- end about__content-->
         </div><!-- end about -->
 
@@ -44,6 +45,7 @@
                         <h2 class="secondaryHeading">Share the memory of your loved one with the world</h2>
 
                         <form action="#" class="needs-validation">
+                            
                             <div class="form__group">
                                 <input type="text" class="form__input" placeholder="FULL NAME of Your Loved One" id="name" required>
                                 <label for="name" class="form__label">FULL NAME</label>
@@ -315,6 +317,10 @@
                                 <input type="email" class="form__input" placeholder="Your EMAIL ADDRESS (for verification)" id="email" required>
                                 <label for="email" class="form__label">EMAIL ADDRESS</label>
                             </div><!-- end form__group -->
+
+                            <div class="form__next">
+                                <a href="#next" class="form__link">Next &rarr;</a>
+                            </div>
 
                             <div class="form__group">
                                 <textarea class="form__input" placeholder="What would you like the world to know about your loved one?" cols="40" rows="5" required></textarea>
