Added contact email, updated Peter Dario's name

--- a/index.html
+++ b/index.html
@@ -338,6 +338,14 @@
             </div><!-- end share__content-->
         </div><!-- end share -->
 
+        <div class="contact" id="contact">
+            <div class="contact__content">
+                <a href="#" class="contact__close">&times;</a>
+                <p class="contact__text"><a href="mailto:contact@facesofcovid.net" class="contact__link">Send email</a></p>
+
+            </div>
+        </div>
+
 		<header class="header" id="header">
             <div class="header__textBox">
             <h1 class="primaryHeading"> 
@@ -355,7 +363,7 @@
                             <img src="img/Dario-Sr.jpg" alt="photo of a young man and his father">
                         </div><!-- end photos__cards front -->
                         <div class="photos__cards--back"><!-- back -->
-                            <h4>Dario, Sr.</h4>
+                            <h4>Peter Dario, Sr.</h4>
                                 <p>My dad died two days ago from COVID19. He died alone because the hospital restricted all visitors in order to contain the outbreak. My deepest regret was not saying bye to him when I brought him to the hospital. I thought it was going to be a “Take care, see you back home.”</p>
                         </div><!-- end photos__cards back -->
                     </div><!-- end photos__cards side -->
