Added a new card

--- a/index.html
+++ b/index.html
@@ -400,6 +400,17 @@
                     </div><!-- end photos__cards back -->
                     </div><!-- end photos__cards side -->
                 </div><!-- end photos__cards -->
+                <div class="photos__cards">
+                    <div class="photos__cards--side">
+                        <div class="photos__cards--front">
+                            <img src="img/Belly-Mujinga.jpg" alt="photo of a mother and her daughter">
+                        </div><!-- end photos__cards front -->
+                    <div class="photos__cards--back">
+                        <h4>Belly Mujinga, 47</h4>
+                            <p>On 22nd March 2020, Belly and her colleague were on shift as ticket office staff ... at London’s Victoria Station. They were out on the concourse by the ticket office when they were assaulted by a member of the public who spat at them ... and told them he had the virus.... Within days of the assault, both women fell ill with the virus.... Belly died on 5 April, 14 days after she was assaulted at Victoria Station. The last time Belly’s husband saw her was when she was taken away in the ambulance.</p>
+                    </div><!-- end photos__cards back -->
+                    </div><!-- end photos__cards side -->
+                </div><!-- end photos__cards -->
             </section><!-- end photos -->
         </main>
     </body>
