--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             </div><!-- end form__group -->
 
                             <div class="form__group">
-                                <input type="text" class="form__input" placeholder="(optional) AGE of your loved one" id="name">
+                                <input type="text" class="form__input" placeholder="(optional) AGE of your loved one" id="age">
                                 <label for="name" class="form__label">AGE</label>
                             </div><!-- end form__group -->
 
