Added description.js (currently commented out)

--- a/index.html
+++ b/index.html
@@ -429,5 +429,6 @@
             </section><!-- end photos -->
         </main>
         <script src="js/upload.js"></script>
+        <!-- <script src="js/description.js"></script>" -->
     </body>
 </html>
