Removed photos__face class

--- a/index.html
+++ b/index.html
@@ -357,10 +357,10 @@
             <section class="photos">
                 <div class="photos__cards"> <!-- container -->
                     <div class="photos__cards--side"><!-- flipper -->
-                        <div class="photos__cards--front photos__face"><!-- front -->
+                        <div class="photos__cards--front"><!-- front -->
                             <img src="img/Dario-Sr.jpg" alt="photo of a young man and his father">
                         </div><!-- end photos__cards front -->
-                        <div class="photos__cards--back photos__face"><!-- back -->
+                        <div class="photos__cards--back"><!-- back -->
                             <h4>Peter Dario, Sr.</h4>
                                 <p>My dad died two days ago from COVID19. He died alone because the hospital restricted all visitors in order to contain the outbreak. My deepest regret was not saying bye to him when I brought him to the hospital. I thought it was going to be a “Take care, see you back home.”</p>
                         </div><!-- end photos__cards back -->
@@ -417,10 +417,10 @@
 
                 <div class="photos__cards"> <!-- container -->
                     <div class="photos__cards--side"><!-- flipper -->
-                        <div class="photos__cards--front photos__face"><!-- front -->
+                        <div class="photos__cards--front"><!-- front -->
                             <img src="img/Joe-Mattern.jpg" alt="photo of a young man and his father">
                         </div><!-- end photos__cards front -->
-                        <div class="photos__cards--back photos__face"><!-- back -->
+                        <div class="photos__cards--back"><!-- back -->
                             <h4>Joe Mattern</h4>
                                 <p>Because this is too abstract for too many people: here’s my dad. The doctor phoned from a hospital a thousand miles away to say they’ve increased his morphine and he will succumb to the COVID-19 today, likely. He’s 76 and no one can be there to hold his hand.</p>
                         </div><!-- end photos__cards back -->
