Corrected alt for Joe Mattern

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <div class="photos__cards"> <!-- container -->
                     <div class="photos__cards--side"><!-- flipper -->
                         <div class="photos__cards--front"><!-- front -->
-                            <img src="img/Joe-Mattern.jpg" alt="photo of a young man and his father">
+                            <img src="img/Joe-Mattern.jpg" alt="photo of a man and his granddaughter">
                         </div><!-- end photos__cards front -->
                         <div class="photos__cards--back"><!-- back -->
                             <h4>Joe Mattern</h4>
