Added Susan Farrell

--- a/index.html
+++ b/index.html
@@ -426,6 +426,17 @@
                         </div><!-- end photos__cards back -->
                     </div><!-- end photos__cards side -->
                 </div><!-- end cards -->
+                <div class="photos__cards"> <!-- container -->
+                    <div class="photos__cards--side"><!-- flipper -->
+                        <div class="photos__cards--front"><!-- front -->
+                            <img src="img/Susan-Farrell.jpg" alt="headshot of a woman">
+                        </div><!-- end photos__cards front -->
+                        <div class="photos__cards--back"><!-- back -->
+                            <h4>Susan Farrell, 74</h4>
+                                <p>This is Susan Farrell. The first woman to die of COVID in Michigan prison. She was 74. Served over 30 years for allegedly killing her husband, who sexually & physically abused her. It's even worse: They let Susan Farrell seize in cell for 45 minutes w the bunkmate screaming for someone and watching her die before healthcare came.</p>
+                        </div><!-- end photos__cards back -->
+                    </div><!-- end photos__cards side -->
+                </div><!-- end cards -->
             </section><!-- end photos -->
         </main>
         <script src="js/upload.js"></script>
