Added several more stories for testing

--- a/index.html
+++ b/index.html
@@ -437,6 +437,50 @@
                         </div><!-- end photos__cards back -->
                     </div><!-- end photos__cards side -->
                 </div><!-- end cards -->
+                <div class="photos__cards"> <!-- container -->
+                    <div class="photos__cards--side"><!-- flipper -->
+                        <div class="photos__cards--front"><!-- front -->
+                            <img src="img/juanita-robinson-and-howard-robinson.jpg" alt="an elderly man in a suit with army medals and an elderly woman smiling">
+                        </div><!-- end photos__cards front -->
+                        <div class="photos__cards--back"><!-- back -->
+                            <h4>Howard Robinson, 94 and Juanita Robinson, 91</h4>
+                                <p>Juanita and Howard Robinson's romance started with double dates ... and ended more than 65 years later as they held hands on their final day together. Juanita, 91, died at 8 p.m. on April 6. Five hours later, Howard died. He was 94. "It's so easy to say, 'Oh, those people were old, they would have died anyway,'" the couple's second daughter, Diana Coleman, said. "But they still added value to everyone's life around them, not to mention their own family. "They still had a lot to give and that was taken away from them."</p>
+                        </div><!-- end photos__cards back -->
+                    </div><!-- end photos__cards side -->
+                </div><!-- end cards -->
+                <div class="photos__cards"> <!-- container -->
+                    <div class="photos__cards--side"><!-- flipper -->
+                        <div class="photos__cards--front"><!-- front -->
+                            <img src="img/margaret-shea.jpg" alt="an elderly woman sitting on a bench in a park">
+                        </div><!-- end photos__cards front -->
+                        <div class="photos__cards--back"><!-- back -->
+                            <h4>Margaret Shea, 82</h4>
+                                <p>Her family hopes that sharing her story makes others think of real people — seniors who are isolated from their families during the pandemic — instead of numbers when statistics are released on COVID-19 cases and deaths. It also gives them a chance to talk about all the things they loved about Margaret Shea, from her stylish glasses to how she'd wipe the floor with any man who dared to step on a golf course with her, at a time when physical distancing makes a celebration of life ceremony impossible.</p>
+                        </div><!-- end photos__cards back -->
+                    </div><!-- end photos__cards side -->
+                </div><!-- end cards -->
+                <div class="photos__cards"> <!-- container -->
+                    <div class="photos__cards--side"><!-- flipper -->
+                        <div class="photos__cards--front"><!-- front -->
+                            <img src="img/warlito-valdez.jpeg" alt="a man in a wooded area with a sunset behind him">
+                        </div><!-- end photos__cards front -->
+                        <div class="photos__cards--back"><!-- back -->
+                            <h4>Warlito Valdez, 47</h4>
+                                <p>Flozier Tabangin said her husband, Warlito Valdez, was a hero. Valdez died of COVID-19 &lbrack;April 5, 2020&rbrack;. He was 47. His employer, the Richmond Society for Community Living, said it became aware he caught it on the job as a residential worker helping people with intellectual and physical disabilities. "My husband has a very good heart. He is such a gentleman and a very nice person, loving husband. "It's just too sad he's gone." Now, she said, her only priority is how to raise and provide for their young daughter without him.</p>
+                        </div><!-- end photos__cards back -->
+                    </div><!-- end photos__cards side -->
+                </div><!-- end cards -->
+                <div class="photos__cards"> <!-- container -->
+                    <div class="photos__cards--side"><!-- flipper -->
+                        <div class="photos__cards--front"><!-- front -->
+                            <img src="img/arlene-reid.jpg" alt="a woman with a big smile">
+                        </div><!-- end photos__cards front -->
+                        <div class="photos__cards--back"><!-- back -->
+                            <h4>Arlene Reid, 51</h4>
+                                <p>Even in her last days before COVID-19 overcame her, Arlene Reid was still trying to be positive. "I'm going to get better," she'd say to her daughter, Adriana Townsend. "Mommy is going to be OK. I'm going to walk away from this." Instead, Reid died in a bedroom in her daughter's Brampton, Ont., home on &lbrack;April 27, 2020&rbrack;, as Townsend frantically performed CPR while waiting for paramedics to arrive.</p>
+                        </div><!-- end photos__cards back -->
+                    </div><!-- end photos__cards side -->
+                </div><!-- end cards -->
             </section><!-- end photos -->
         </main>
         <script src="js/upload.js"></script>
