Fixed flexbox display

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <div class="photos__container">
                         <div class="photos__wrapper">
                             <img src="img/Dario-Sr.jpg" alt="photo of a young man and his father" class="photos__image">
-                            <a href="#Dario" class="photos__memory">
+                            <a href="#dario" class="photos__memory">
                                 <div class="photos__details">
                                     <div class="photos__name-date">
                                         <h4 class="photos__name">Peter Dario, Sr.</h4>
@@ -462,8 +462,13 @@
         </main>
         <!--<script src="js/upload.js"></script>
         <!-- <script src="js/description.js"></script>" -->
-        <div class="Dario" id="dario">
-            <p>My dad ... died alone because the hospital restricted all visitors in order to contain the outbreak. My deepest regret was not saying bye to him when I brought him to the hospital. I thought it was going to be a “Take care, see you back home.”</p>
+
+        <div class="text text__dario" id="dario">
+            <div class="dario__memory">
+                <a href="#" class="about__close">&times;</a>
+                <p>My dad ... died alone because the hospital restricted all visitors in order to contain the outbreak. My deepest regret was not saying bye to him when I brought him to the hospital. I thought it was going to be a “Take care, see you back home.”</p>
+            </div>
+            
         </div>
     </body>
 </html>
