Completed first photo memory - Dario

--- a/index.html
+++ b/index.html
@@ -361,7 +361,6 @@
 		<main>
             <section class="photos">
                 <div class="photos__column photos__column-1">
-                    
                         <div class="photos__wrapper">
                             <img src="img/Dario-Sr.jpg" alt="photo of a young man and his father" class="photos__image">
                             <a href="#dario" class="photos__memory">
@@ -460,12 +459,12 @@
          <script src="js/description.js"></script>" -->
 
         <div class="memory" id="dario">
-            <div class="memory__dario">
+            <div class="memory__lovedOne">
                 <a href="#" class="memory__close">&times;</a>
-                <div class="memory__text">
+                <div class="memory__lovedOne-text">
                     <p>My dad ... died alone because the hospital restricted all visitors in order to contain the outbreak. My deepest regret was not saying bye to him when I brought him to the hospital. I thought it was going to be a “Take care, see you back home.”</p>
-                </div>
-            </div>
-        </div>
+                </div> <!-- end memory__text -->
+            </div> <!-- end memory__dario -->
+        </div> <!-- end memory -->
     </body>
 </html>
