Changed header message

--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
 		<header class="header" id="header">
             <div class="header__textBox">
             <h1 class="primaryHeading"> 
-                <span class="primaryHeading__main">The Pandemic is People</span>
-                <span class="primaryHeading__sub">and they are more than statistics</span>
+                <span class="primaryHeading__main">Faces of COVID-19</span>
+                <span class="primaryHeading__sub">because statistics aren't people</span>
             </h1>
             </div><!-- end header__textBox -->
         </header>
