Finalized some design elements

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="about" id="about">
             <div class="about__content">
                 <a href="#" class="about__close">&times;</a>
-                <p class="about__text">Designed and built by <a href="https://github.com/LaurenGayle" target="_blank" class="about__link">Lauren Gayle</a>, <a href="https://github.com/jinayjain/" target="_blank" class="about__link">Jinay Jain</a>, <a href="https://www.linkedin.com/in/aaronajones/" target="_blank" class="about__link">Aaron Jones</a>, <a href="https://www.linkedin.com/in/lillianwight/" target="_blank" class="about__link">Lillian Wight</a>, and Emily Zacherl as their contribution to <a href="https://codevid19.com/" target="_blank" class="about__link">CODEVID-19</a>, the world's first global pandemic hackathon.</p>
+                <p class="about__text">Designed and built <!-- by <a href="https://github.com/LaurenGayle" target="_blank" class="about__link">Lauren Gayle</a> <a href="https://github.com/jinayjain/" target="_blank" class="about__link">Jinay Jain</a> <a href="https://www.linkedin.com/in/aaronajones/" target="_blank" class="about__link">Aaron Jones</a> <a href="https://www.linkedin.com/in/lillianwight/" target="_blank" class="about__link">Lillian Wight</a> and Emily Zacherl --> as a contribution to <a href="https://codevid19.com/" target="_blank" class="about__link">CODEVID-19</a>, the world's first global pandemic hackathon.</p>
             </div><!-- end about__content-->
         </div><!-- end about -->
         
@@ -49,7 +49,7 @@
 
         <div class="share" id="share">
             <div class="share__content">
-                <h2 class="secondaryHeading">Share the memory of your loved one with the world</h2>
+                <!-- <h2 class="secondaryHeading">Share the memory of your loved one with the world</h2> -->
                 <a href="#" class="share__close">&times;</a>
 
                 <div class="construction">
@@ -380,7 +380,7 @@
         <div class="contact" id="contact">
             <div class="contact__content">
                 <a href="#" class="contact__close">&times;</a>
-                <p class="contact__text"><a href="mailto:contact@facesofcovid.net" class="contact__link">Send email</a></p>
+                <p class="contact__text"><a href="mailto:contact@facesofcovid.net" class="contact__link">Send us an email</a></p>
             </div><!-- end contact__content -->
         </div><!-- end contact -->
 
