--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <!-- COLUMN ONE -->
                 <div class="photos__column photos__column-1">
 
-                        <div class="photos__wrapper">
+                        <div class="photos__wrapper" id="peterDario-home">
                             <img src="img/Dario-Sr.jpg" alt="photo of a young man and his father" class="photos__image">
                             <a href="#peterDario" class="photos__memory">
                                 <div class="photos__details">
@@ -417,7 +417,7 @@
                             </a>
                         </div><!-- end photos__wrapper -->
                     
-                        <div class="photos__wrapper">
+                        <div class="photos__wrapper" id="warlitoValdez-home">
                             <img src="img/warlito-valdez.jpeg" alt="a man in a wooded area with a sunset behind him">
                             <a href="#warlitoValdez" class="photos__memory">
                                 <div class="photos__details">
@@ -440,7 +440,7 @@
                 <!-- COLUMN TWO -->
                 <div class="photos__column photos__column-2">
 
-                    <div class="photos__wrapper">
+                    <div class="photos__wrapper" id="frankGabrin-home">
                         <img src="img/Frank-Gabrin.jpg" alt="photo of a man and his friend">
                         <a href="#frankGabrin" class="photos__memory">
                             <div class="photos__details">
@@ -456,7 +456,7 @@
                         </a>
                     </div><!-- end photos__wrapper -->
 
-                    <div class="photos__wrapper">
+                    <div class="photos__wrapper" id="juanitaRobinson-home">
                         <img src="img/juanita-robinson-and-howard-robinson.jpg" alt="an elderly man in a suit with army medals and an elderly woman smiling">
                         <a href="#juanitaRobinson" class="photos__memory">
                             <div class="photos__details">
@@ -480,7 +480,7 @@
 
                 <div class="photos__column photos__column-3">
 
-                    <div class="photos__wrapper">
+                    <div class="photos__wrapper" id="margaretShea-home">
                         <img src="img/margaret-shea.jpg" alt="an elderly woman sitting on a bench in a park">
                         <a href="#margaretShea" class="photos__memory">
                             <div class="photos__details">
@@ -496,7 +496,7 @@
                         </a>
                     </div><!-- end photos__wrapper-->
 
-                    <div class="photos__wrapper">
+                    <div class="photos__wrapper" id="susanFarrell-home">
                         <img src="img/Susan-Farrell.jpg" alt="headshot of a woman">
                         <a href="#susanFarrell" class="photos__memory">
                             <div class="photos__details">
@@ -519,7 +519,7 @@
                 <!-- COLUMN FOUR -->
                 <div class="photos__column photos__column-4">
 
-                    <div class="photos__wrapper">
+                    <div class="photos__wrapper" id="rebeccaMack-home">
                         <img src="img/Rebecca-Mack.jpg" alt="photo of a young woman in her graduating cap and gown">
                         <a href="#rebeccaMack" class="photos__memory">
                             <div class="photos__details">
@@ -536,7 +536,7 @@
                     </div><!-- end photos__wrapper-->
                     
 
-                    <div class="photos__wrapper">
+                    <div class="photos__wrapper" id="arleneReid-home">
                         <img src="img/arlene-reid.jpg" alt="a woman with a big smile">
                         <a href="#arleneReid" class="photos__memory">
                             <div class="photos__details">
@@ -559,7 +559,7 @@
                 <!-- COLUMN FIVE -->
                 <div class="photos__column photos__column-5">
 
-                    <div class="photos__wrapper">
+                    <div class="photos__wrapper" id="bellyMujinga-home">
                         <img src="img/Belly-Mujinga.jpg" alt="photo of a mother and her daughter">
                         <a href="#bellyMujinga" class="photos__memory">
                             <div class="photos__details">
@@ -575,7 +575,7 @@
                         </a>
                     </div><!-- end photos__wrapper-->
 
-                    <div class="photos__wrapper">
+                    <div class="photos__wrapper" id="joeMattern-home">
                         <img src="img/Joe-Mattern.jpg" alt="photo of a man and his granddaughter">
                         <a href="#joeMattern" class="photos__memory">
                             <div class="photos__details">
@@ -604,7 +604,7 @@
 
         <div class="memory" id="peterDario">
             <div class="memory__lovedOne memory__peterDario">
-                <a href="#" class="memory__close">&times;</a>
+                <a href="#peterDario-home" class="memory__close">&times;</a>
                 <div class="memory__lovedOne-text">
                     <p>My dad ... died alone because the hospital restricted all visitors in order to contain the outbreak. My deepest regret was not saying bye to him when I brought him to the hospital. I thought it was going to be a “Take care, see you back home.”</p>
                 </div> <!-- end memory__lovedOne-text -->
@@ -613,7 +613,7 @@
 
         <div class="memory" id="warlitoValdez">
             <div class="memory__lovedOne memory__warlitoValdez">
-                <a href="#" class="memory__close">&times;</a>
+                <a href="#warlitoValdez-home" class="memory__close">&times;</a>
                 <div class="memory__lovedOne-text">
                     <p>Flozier Tabangin said her husband, Warlito Valdez, was a hero. Valdez died of COVID-19 .... He was 47. His employer, the Richmond Society for Community Living, said it became aware he caught it on the job as a residential worker helping people with intellectual and physical disabilities. "My husband has a very good heart. He is such a gentleman and a very nice person, loving husband. "It's just too sad he's gone." Now, she said, her only priority is how to raise and provide for their young daughter without him.</p>
                 </div> <!-- end memory__lovedOne-text -->
@@ -622,7 +622,7 @@
 
         <div class="memory" id="frankGabrin">
             <div class="memory__lovedOne memory__frankGabrin">
-                <a href="#" class="memory__close">&times;</a>
+                <a href="#frankGabrin-home" class="memory__close">&times;</a>
                 <div class="memory__lovedOne-text">
                     <p>I lost my best friend to Covid19 a few hours ago. Dr Frank Gabrin was an ER Doctor in NYC. He planned to go back to work when he recovered. It took only five days from the first sign of symptoms. He leaves a husband of less than one year behind. We are devastated.</p>
                 </div> <!-- end memory__lovedOne-text -->
@@ -631,7 +631,7 @@
 
         <div class="memory" id="juanitaRobinson">
             <div class="memory__lovedOne memory__juanitaRobinson">
-                <a href="#" class="memory__close">&times;</a>
+                <a href="#juanitaRobinson-home" class="memory__close">&times;</a>
                 <div class="memory__lovedOne-text">
                     <p>Juanita and Howard Robinson's romance started with double dates ... and ended more than 65 years later as they held hands on their final day together. Juanita, 91, died at 8 p.m. on April 6. Five hours later, Howard died. He was 94. "It's so easy to say, 'Oh, those people were old, they would have died anyway,'" the couple's second daughter, Diana Coleman, said. "But they still added value to everyone's life around them, not to mention their own family. "They still had a lot to give and that was taken away from them."</p>
                 </div> <!-- end memory__lovedOne-text -->
@@ -640,7 +640,7 @@
 
         <div class="memory" id="margaretShea">
             <div class="memory__lovedOne memory__margaretShea">
-                <a href="#" class="memory__close">&times;</a>
+                <a href="#margaretShea-home" class="memory__close">&times;</a>
                 <div class="memory__lovedOne-text">
         <p>Her family hopes that sharing her story makes others think of real people — seniors who are isolated from their families during the pandemic — instead of numbers when statistics are released on COVID-19 cases and deaths. It also gives them a chance to talk about all the things they loved about Margaret Shea, from her stylish glasses to how she'd wipe the floor with any man who dared to step on a golf course with her, at a time when physical distancing makes a celebration of life ceremony impossible.</p>
                 </div><!-- end memory__lovedOne-text -->
@@ -649,7 +649,7 @@
 
         <div class="memory" id="susanFarrell">
             <div class="memory__lovedOne memory__susanFarrell">
-                <a href="#" class="memory__close">&times;</a>
+                <a href="#susanFarrell-home" class="memory__close">&times;</a>
                 <div class="memory__lovedOne-text">
                     <p>This is Susan Farrell. The first woman to die of COVID in Michigan prison. She was 74. Served over 30 years for allegedly killing her husband, who sexually & physically abused her. It's even worse: They let Susan Farrell seize in cell for 45 minutes w the bunkmate screaming for someone and watching her die before healthcare came.</p>
                 </div><!-- end memory__lovedOne-text -->
@@ -658,7 +658,7 @@
 
         <div class="memory" id="rebeccaMack">
             <div class="memory__lovedOne memory__rebeccaMack">
-                <a href="#" class="memory__close">&times;</a>
+                <a href="#rebeccaMack-home" class="memory__close">&times;</a>
                 <div class="memory__lovedOne-text">
                     <p>She was an absolutely wonderful daughter. We couldn't have wished for a nicer daughter. She was so caring. She was just the light of our lives. I can't even begin to imagine life without her.</p>
                 </div><!-- end memory__lovedOne-text -->
@@ -667,7 +667,7 @@
 
         <div class="memory" id="arleneReid">
             <div class="memory__lovedOne memory__arleneReid">
-                <a href="#" class="memory__close">&times;</a>
+                <a href="#arleneReid-home" class="memory__close">&times;</a>
                 <div class="memory__lovedOne-text">
                     <p>Even in her last days before COVID-19 overcame her, Arlene Reid was still trying to be positive. "I'm going to get better," she'd say to her daughter, Adriana Townsend. "Mommy is going to be OK. I'm going to walk away from this." Instead, Reid died in a bedroom in her daughter's Brampton, Ont., home ... as Townsend frantically performed CPR while waiting for paramedics to arrive.</p>
                 </div><!-- end memory__lovedOne-text -->
@@ -676,7 +676,7 @@
 
         <div class="memory" id="bellyMujinga">
             <div class="memory__lovedOne memory__bellyMujinga">
-                <a href="#" class="memory__close">&times;</a>
+                <a href="#bellyMujinga-home" class="memory__close">&times;</a>
                 <div class="memory__lovedOne-text">
                     <p>On 22nd March 2020, Belly and her colleague were on shift as ticket office staff ... at London’s Victoria Station. They were out on the concourse by the ticket office when they were assaulted by a member of the public who spat at them ... and told them he had the virus.... Within days of the assault, both women fell ill with the virus.... Belly died ... 14 days after she was assaulted at Victoria Station. The last time Belly’s husband saw her was when she was taken away in the ambulance.</p>
                 </div><!-- end memory__lovedOne-text -->
@@ -685,7 +685,7 @@
 
         <div class="memory" id="joeMattern">
             <div class="memory__lovedOne memory__joeMattern">
-                <a href="#" class="memory__close">&times;</a>
+                <a href="#joeMattern-home" class="memory__close">&times;</a>
                 <div class="memory__lovedOne-text">
                     <p>Because this is too abstract for too many people: here’s my dad. The doctor phoned from a hospital a thousand miles away to say they’ve increased his morphine and he will succumb to the COVID-19 today, likely. He’s 76 and no one can be there to hold his hand.</p>
                 </div><!-- end memory__lovedOne-text -->
