Made suggested changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <ul class="navigation__list">
                     <li class="navigation__item"><a href="#about" class="navigation__link">About</a></li>
                     <li class="navigation__item"><a href="#share" class="navigation__link">Share Your Memory</a></li>
-                    <li class="navigation__item"><a href="#credits" class="navigation__link">Credits</a></li>
+                    <!-- DISABLED <li class="navigation__item"><a href="#credits" class="navigation__link">Credits</a></li> -->
                     <li class="navigation__item"><a href="#contact" class="navigation__link">Contact Us</a></li>
                     <!-- DISABLED <li class="navigation__item"><a href="#" class="navigation__link">Back</a></li> -->
                 </ul>
@@ -51,11 +51,12 @@
             <div class="share__content">
                 <!-- <h2 class="secondaryHeading">Share the memory of your loved one with the world</h2> -->
                 <a href="#" class="share__close">&times;</a>
-
-                <div class="construction">
-                    <h2 class="construction__header">UNDER CONSTRUCTION</h2>
-                    <p class="construction__text">Please email your memories to <a href="mailto:contact@facesofcovid.net" class="construction__link">contact@facesofcovid.net</a></p>
-                </div><!-- end construction -->
+                <p class="share__content-text">We invite you to email your photos and memories to <a href="mailto:contact@facesofcovid.net" class="share__content-link">contact@facesofcovid.net</a></p>
+                <p class="share__content-text">Please include your loved one's:
+                <br>&raquo; full name
+                <br>&raquo; age
+                <br>&raquo; date of death</p>
+            
 
                         <!-- DISABLED 
                         <form action="#" class="form needs-validation">
@@ -409,10 +410,8 @@
                                         <h4 class="photos__name">Peter Dario, Sr.</h4>
                                         <h5 class="photos__date">Died: 19/03/2020</h5>
                                     </div><!-- end photos__name-date -->
-                                    <div class="photos__demo">This memory is of a real COVID-19 victim but was not submitted by family or friends. It is for demo purposes only.
-                                    </div><!-- end photos__demo -->
-                                    <div class="photos__read-more">Read the memory
-                                    </div><!-- end photos__read-more -->
+                                    <div class="photos__more"><p class="photos__more-read">This photo is of a real COVID-19 victim but was not submitted by family or friends. &nbsp; &nbsp;<span>Read the memory.</span></p><!-- end photos__more-read -->
+                                    </div><!-- end photos__more -->
                                 </div><!-- end photos__details -->
                             </a>
                         </div><!-- end photos__wrapper -->
@@ -425,10 +424,8 @@
                                         <h4 class="photos__name">Warlito Valdez, 47</h4>
                                         <h5 class="photos__date">Died: April 5, 2020</h5>
                                     </div><!-- end photos__name-date -->
-                                    <div class="photos__demo">This memory is of a real COVID-19 victim but was not submitted by family or friends. It is for demo purposes only.
-                                    </div><!-- end photos__demo-->
-                                    <div class="photos__read-more">Read the memory
-                                    </div><!-- end photos__read-more -->
+                                    <div class="photos__more"><p class="photos__more-read">This photo is of a real COVID-19 victim but was not submitted by family or friends. &nbsp; &nbsp;<span>Read the memory.</span></p><!-- end photos__more-read -->
+                                    </div><!-- end photos__more -->
                                 </div><!-- end photos__details -->
                             </a>
                         </div><!-- end photos__wrapper -->
@@ -448,10 +445,8 @@
                                     <h4 class="photos__name">Dr. Frank Gabrin</h4>
                                     <h5 class="photos__date">Died: March 31, 2020</h5>
                                 </div><!-- end photos__name-date -->
-                                <div class="photos__demo">This memory is of a real COVID-19 victim but was not submitted by family or friends. It is for demo purposes only.
-                                </div><!-- end photos__demo -->
-                                <div class="photos__read-more">Read the memory
-                                </div><!-- end photos__read-more -->
+                                <div class="photos__more"><p class="photos__more-read">This photo is of a real COVID-19 victim but was not submitted by family or friends. &nbsp; &nbsp;<span>Read the memory.</span></p><!-- end photos__more-read -->
+                                </div><!-- end photos__more -->
                             </div><!-- end photos__details -->
                         </a>
                     </div><!-- end photos__wrapper -->
@@ -464,10 +459,8 @@
                                     <h4 class="photos__name">Howard Robinson, 94 and Juanita Robinson, 91</h4>
                                     <h5 class="photos__date">Died: April 6, 2020 and April 7, 2020</h5>
                                 </div><!-- end photos__name-date -->
-                                <div class="photos__demo">This memory is of a real COVID-19 victim but was not submitted by family or friends. It is for demo purposes only.
-                                </div><!-- end photos__demo -->
-                                <div class="photos__read-more">Read the memory
-                                </div><!-- end photos__read-more -->
+                                <div class="photos__more"><p class="photos__more-read">This photo is of a real COVID-19 victim but was not submitted by family or friends. &nbsp; &nbsp;<span>Read the memory.</span></p><!-- end photos__more-read -->
+                                </div><!-- end photos__more -->
                             </div><!-- end photos__details -->
                         </a>
                     </div><!-- end photos__wrapper -->
@@ -488,10 +481,8 @@
                                     <h4 class="photos__name">Margaret Shea, 82</h4>
                                     <h5 class="photos__date">Died: April 2, 2020</h5>
                                 </div><!-- end photos__name-date -->
-                                <div class="photos__demo">This memory is of a real COVID-19 victim but was not submitted by family or friends. It is for demo purposes only.
-                                </div><!-- end photos__demo -->
-                                <div class="photos__read-more">Read the memory
-                                </div><!-- end photos__read-more -->
+                                <div class="photos__more"><p class="photos__more-read">This photo is of a real COVID-19 victim but was not submitted by family or friends. &nbsp; &nbsp;<span>Read the memory.</span></p><!-- end photos__more-read -->
+                                </div><!-- end photos__more -->
                             </div><!-- end photos__details -->
                         </a>
                     </div><!-- end photos__wrapper-->
@@ -504,10 +495,8 @@
                                     <h4 class="photos__name">Susan Farrell, 74</h4>
                                     <h5 class="photos__date">Died: April 8, 2020</h5>
                                 </div><!-- end photos__name-date -->
-                                <div class="photos__demo">This memory is of a real COVID-19 victim but was not submitted by family or friends. It is for demo purposes only.
-                                </div><!-- end photos__demo -->
-                                <div class="photos__read-more">Read the memory
-                                </div><!-- end photos__read-more -->
+                                <div class="photos__more"><p class="photos__more-read">This photo is of a real COVID-19 victim but was not submitted by family or friends. &nbsp; &nbsp;<span>Read the memory.</span></p><!-- end photos__more-read -->
+                                </div><!-- end photos__more -->
                             </div><!-- end photos__details -->
                         </a>
                     </div><!-- end photos__wrapper-->
@@ -527,10 +516,8 @@
                                     <h4 class="photos__name">Rebecca Mack, RN, 29</h4>
                                     <h5 class="photos__date">Died: April 5, 2020</h5>
                                 </div><!-- end photos__name-date -->
-                                <div class="photos__demo">This memory is of a real COVID-19 victim but was not submitted by family or friends. It is for demo purposes only.
-                                </div><!-- end photos__demo -->
-                                <div class="photos__read-more">Read the memory
-                                </div><!-- end photos__read-more -->
+                                <div class="photos__more"><p class="photos__more-read">This photo is of a real COVID-19 victim but was not submitted by family or friends. &nbsp; &nbsp;<span>Read the memory.</span></p><!-- end photos__more-read -->
+                                </div><!-- end photos__more -->
                             </div><!-- end photos__details -->
                         </a>
                     </div><!-- end photos__wrapper-->
@@ -544,10 +531,8 @@
                                     <h4 class="photos__name">Arlene Reid, 51</h4>
                                     <h5 class="photos__date">Died: April 27, 2020</h5>
                                 </div><!-- end photos__name-date -->
-                                <div class="photos__demo">This memory is of a real COVID-19 victim but was not submitted by family or friends. It is for demo purposes only.
-                                </div><!-- end photos__demo -->
-                                <div class="photos__read-more">Read the memory
-                                </div><!-- end photos__read-more -->
+                                <div class="photos__more"><p class="photos__more-read">This photo is of a real COVID-19 victim but was not submitted by family or friends. &nbsp; &nbsp;<span>Read the memory.</span></p><!-- end photos__more-read -->
+                                </div><!-- end photos__more -->
                             </div><!-- end photos__details -->
                         </a>
                     </div><!-- end photos__wrapper-->
@@ -567,10 +552,8 @@
                                     <h4 class="photos__name">Belly Mujinga, 47</h4>
                                     <h5 class="photos__date">Died: April 5, 2020</h5>
                                 </div><!-- end photos__name-date -->
-                                <div class="photos__demo">This memory is of a real COVID-19 victim but was not submitted by family or friends. It is for demo purposes only.
-                                </div><!-- end photos__demo -->
-                                <div class="photos__read-more">Read the memory
-                                </div><!-- end photos__read-more -->
+                                <div class="photos__more"><p class="photos__more-read">This photo is of a real COVID-19 victim but was not submitted by family or friends. &nbsp; &nbsp;<span>Read the memory.</span></p><!-- end photos__more-read -->
+                                </div><!-- end photos__more -->
                             </div><!-- end photos__details -->
                         </a>
                     </div><!-- end photos__wrapper-->
@@ -583,10 +566,8 @@
                                     <h4 class="photos__name">Joe Mattern</h4>
                                     <h5 class="photos__date">Died: May 3, 2020</h5>
                                 </div><!-- end photos__name-date -->
-                                <div class="photos__demo">This memory is of a real COVID-19 victim but was not submitted by family or friends. It is for demo purposes only.
-                                </div><!-- end photos__demo -->
-                                <div class="photos__read-more">Read the memory
-                                </div><!-- end photos__read-more -->
+                                <div class="photos__more"><p class="photos__more-read">This photo is of a real COVID-19 victim but was not submitted by family or friends. &nbsp; &nbsp;<span>Read the memory.</span></p><!-- end photos__more-read -->
+                                </div><!-- end photos__more -->
                             </div><!-- end photos__details -->
                         </a>
                     </div><!-- end photos__wrapper-->
