--- a/index.html
+++ b/index.html
@@ -403,7 +403,11 @@
                 <div class="photos__column photos__column-1">
 
                         <div class="photos__wrapper" id="peterDario-home">
-                            <img src="img/Dario-Sr.jpg" alt="photo of a young man and his father" class="photos__image">
+                            <picture>
+                                <source media="(max-width: 399px)" srcset="img/Dario-Sr-crop.jpg">
+                                <source media="(min-width: 400px)" srcset="img/Dario-Sr.jpg">
+                                <img src="img/Dario-Sr.jpg" alt="photo of a young man and his father">
+                            </picture>
                             <a href="#peterDario" class="photos__memory">
                                 <div class="photos__details">
                                     <div class="photos__name-date">
