Readjusted breakpoints, adjusted base typography

--- a/index.html
+++ b/index.html
@@ -388,10 +388,10 @@
         <!-- SITE HEADER -->
 		<header class="header" id="header">
             <div class="header__textBox">
-            <h1 class="primaryHeading"> 
-                <span class="primaryHeading__main">Faces of COVID-19</span>
-                <span class="primaryHeading__sub">because statistics aren't people</span>
-            </h1>
+            <div class="primaryHeading"> 
+                <h1 class="primaryHeading__main">Faces of COVID-19</h1>
+                <h3 class="primaryHeading__sub">because statistics aren't people</h3>
+            </div>
             </div><!-- end header__textBox -->
         </header>
 
